[project]
name = "pyrep-ext"
version = "0.0.1"
description = "An extension to the original PyRep"
readme = "README.md"
authors = [
    { name = "Wilbert Pumacay", email = "wilbert.pumacay@ucsp.edu.pe" }
]
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
