[project]
name = "pyrep-ext"
version = "0.0.1"
description = "An extension to the original PyRep"
readme = "README.md"
authors = [
    { name = "Wilbert Pumacay", email = "wilbert.pumacay@ucsp.edu.pe" }
]
requires-python = ">=3.10"
dependencies = [
    "cbor>=1.0.0",
    "cbor2>=5.6.5",
    "lark>=1.2.2",
    "numpy>=2.2.6",
    "pyzmq>=27.0.0",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py310"
line-length = 80

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
docstring-code-format = false

[tool.ruff.lint]
select = ["F", "E", "W", "I"]
ignore = [
    "C408", # dict() calls
    "C901", # function complexity
    "E501", # line too long (handled by line-length setting
]
